# proxy-inference-engine

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  repo.txt  run.sh  sm.txt  test.py
.claude/: settings.local.json
.github/workflows/: python-publish.yml
benchmarks/: RESULTS.md  baseline.json
benchmarks/cpp/: CMakeLists.txt  README.md
benchmarks/cpp/core/: page_allocator_benchmark.cpp
benchmarks/cpp/utils/: profiled_page_allocator.hpp  tracy_wrapper.hpp
proxy_inference_engine/cache/: prompt_cache.py
proxy_inference_engine/engine/: __init__.py  inference_engine.py
proxy_inference_engine/interaction/: __init__.py  content.py  interaction.py
proxy_inference_engine/models/: __init__.py  base.py  utils.py
proxy_inference_engine/tokenizer/: tokenizer.py
scripts/: benchmarks.py  build_run.sh  coverage.sh  generate_coverage.sh  run.sh
src/: text.txt
src/pie_core/: CMakeLists.txt
src/pie_core/include/: page.hpp  page_allocator.hpp  scheduler.hpp
src/pie_core/include/attention/: AttentionRegistry.hpp  IAttentionMechanism.hpp  PagedAttentionMechanism.hpp  StandardAttentionMechanism.hpp
src/pie_core/include/engine/: batch_details.hpp  engine.hpp  page.hpp  page_allocator.hpp  raw_request.hpp  request_preprocessor.hpp  response_postprocessor.hpp  scheduler.hpp  sequence.hpp
src/pie_core/include/ipc/: ipc_consumer.hpp  ipc_defs.hpp  ipc_manager.hpp  ipc_producer.hpp  ipc_reader.hpp  ipc_request.hpp  ipc_response.hpp  request.hpp  request_reader.hpp  request_writer.hpp  response.hpp  response_reader.hpp  response_writer.hpp  shared_memory_manager.hpp
src/pie_core/include/layers/: activation_functions.hpp  attention.hpp  embedding.hpp  linear.hpp  mlp.hpp  norm.hpp  rope.hpp  transformer_block.hpp
src/pie_core/include/logit_processors/: logit_bias_processor.hpp  logit_processor.hpp  logit_processor_factory.hpp  logit_processor_registry.hpp  repetition_processor.hpp
src/pie_core/include/models/: imodel.hpp  model.hpp  model_config.hpp  model_factory.hpp  model_registry.hpp  model_utils.hpp
src/pie_core/include/samplers/: categorical.hpp  greedy.hpp  isampler.hpp  sampler_factory.hpp  sampler_registry.hpp
src/pie_core/include/sequence/: ipc_handles.hpp  logits_params.hpp  sampling_params.hpp  sequence.hpp  stop_criteria.hpp
src/pie_core/include/tokenizers/: tokenizer.hpp
src/pie_core/include/utils/: read_file.hpp
src/pie_core/src/: bindings.cpp  main.cpp  page.cpp  page_allocator.cpp  scheduler.cpp
src/pie_core/src/attention/: AttentionRegistry.cpp  PagedAttentionMechanism.cpp  StandardAttentionMechanism.cpp
src/pie_core/src/engine/: engine.cpp  page_allocator.cpp  request_preprocessor.cpp  response_postprocessor.cpp  scheduler.cpp
src/pie_core/src/ipc/: ipc_manager.cpp  ipc_producer.cpp  ipc_reader.cpp  request_reader.cpp  request_writer.cpp  response_reader.cpp  response_writer.cpp  shared_memory_manager.cpp
src/pie_core/src/kernels/: paged_attention.metal
src/pie_core/src/layers/: attention.cpp  embedding.cpp  linear.cpp  mlp.cpp  norm.cpp  rope.cpp  transformer_block.cpp
src/pie_core/src/logits_processors/: logit_bias_processor.cpp  logit_processor_factory.cpp  logit_processor_registry.cpp  repetition_processor.cpp
src/pie_core/src/memory/: page_allocator.cpp
src/pie_core/src/models/: model_config.cpp  model_factory.cpp  model_registry.cpp  model_utils.cpp
src/pie_core/src/models/llama3/: llama3.cpp  llama3.hpp  llama3_config.cpp  llama3_config.hpp
src/pie_core/src/samplers/: categorical.hpp  greedy.cpp  sampler_factory.cpp  sampler_registry.cpp
src/pie_core/src/sequence/: sequence.cpp
src/pie_core/src/tokenizers/: tokenizer.cpp
src/proxy_inference_engine/: __init__.py  generate_step.py  utils.py
src/proxy_inference_engine/cache/: cache.py  prompt_cache.py  quantized.py  reusable.py  rotating.py
src/proxy_inference_engine/cache/kv_cache/: __init__.py  paged.py  quantized.py
src/proxy_inference_engine/engine/: __init__.py  client.py  inference_engine.py  prepare_inputs.py  utils.py
src/proxy_inference_engine/inference/: llm.py
src/proxy_inference_engine/interaction/: __init__.py  content.py  interaction.py
src/proxy_inference_engine/models/: __init__.py  base.py  rope.py  utils.py
src/proxy_inference_engine/models/gemma/: __init__.py  ensemble.py  language.py  vision.py
src/proxy_inference_engine/models/intern/: __init__.py  ensemble.py  language.py  vision.py
src/proxy_inference_engine/models/llama/: __init__.py  language.py  utils.py
src/proxy_inference_engine/samplers/: __init__.py
src/proxy_inference_engine/sdk/: __init__.py  client.py  types.py
src/proxy_inference_engine/server/: __main__.py  app.py  config.py  dependencies.py  ipc_dispatch.py  server.py
src/proxy_inference_engine/server/models/: __init__.py  chat.py
src/proxy_inference_engine/server/models/chat/: __init__.py  format.py  logprobs.py  output.py  request.py  tools.py
src/proxy_inference_engine/server/models/responses/: format.py  output.py  request.py  structure.py  tools.py
src/proxy_inference_engine/server/routes/: chat.py  completions.py  responses.py
src/proxy_inference_engine/state_machine/: root.py  sub_state.py
src/proxy_inference_engine/state_machine/sub_states/: __init__.py  freeform_text.py  reasoning.py  structured_output.py  text_output.py  tool_call.py
src/proxy_inference_engine/tokenizer/: __init__.py  tokenizer.py
src/proxy_inference_engine/tokenizer/control_tokens/: __init__.py  chatml.json  gemma.json
src/proxy_inference_engine/vision/: __init__.py
tests/cpp/: CMakeLists.txt  test_kv_page.cpp  test_page_allocator.cpp
tests/python/: __init__.py  test_basic.py
